--- a/_posts/2024-01-18-sample.md
+++ b/_posts/2024-01-18-sample.md
@@ -3,7 +3,7 @@ layout: post
 title: 프로그래머스 코드 정리 1일차
 categories: [javascript, programers]
 tags: [javascript, programers]
-description: Sample placeholder post.
+description: 매개변수와 함수 내 덧셈뺄셈
 ---
 
 ## 프로그래머스 코딩테스트
