--- a/_posts/2024-01-24-sample.md
+++ b/_posts/2024-01-24-sample.md
@@ -98,4 +98,4 @@ function solution(my_string, letter) {
 }
 {% endhighlight %}
 
-설명: replace는 첫 번째 문자를 지우는 메서드이다. 그러나 전체 문자열에서 특정 문자를 지우고 싶다면 new RegExp를 사용하여야 올바른 정규식이 된다.
+설명: replace는 첫 번째 문자를 지우는 메서드이다. 그러나 전체 문자열에서 특정 문자를 지우고 싶다면 new RegExp를 사용하여야 올바른 정규식이 된다고 할 수 있다. 
